--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,10 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write . --ignore-path .prettierignore",
+    "format:check": "prettier --check . --ignore-path ../.prettierignore",
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,5 +30,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=22.14.0"
   }
 }
