--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@
 root = true
 
 [*] # Aplica a todos los archivos
-indent_style = tab
+indent_style = space
 indent_size = 4
 end_of_line = lf
 charset = utf-8
@@ -25,3 +25,10 @@ indent_style = space
 
 [package-lock.json] # Excluir archivos generados
 indent_style = ignore 
+
+[*.{png,jpg,gif,ico}] # Específico para binarios y dif
+binary = true
+diff = image
+
+[*.{bat,cmd}]
+end_of_line = crlf
