--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-formatter-pretty": "^6.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsdoc": "^50.6.14",
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-markdown": "^5.1.0",
