--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
+    "dev:debug": "cross-env NODE_DEBUG=mongoose,http NODE_ENV=development nodemon src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write . --ignore-path .prettierignore",
     "format:check": "prettier --check . --ignore-path ../.prettierignore",
-    "start": "node src/index.js",
+    "start": "cross-env NODE_ENV=production node src/index.js",
+    "start:staging": "cross-env NODE_ENV=staging node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -31,6 +33,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.10"
   },
   "engines": {
