--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,15 +1,20 @@
 {
-  "arrowParens": "always",
-  "bracketSpacing": true,
-  "endOfLine": "lf",
-  "jsxSingleQuote": true,
-  "printWidth": 120,
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4,
-  "trailingComma": "all",
-  "useTabs": false,
   "overrides": [
+    {
+      "files": ["**/*.{js,jsx}"],
+      "options": {
+        "arrowParens": "always",
+        "bracketSpacing": true,
+        "endOfLine": "lf",
+        "jsxSingleQuote": true,
+        "printWidth": 120,
+        "semi": true,
+        "singleQuote": true,
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "useTabs": false
+      }
+    },
     {
       "files": ["**/*.json"],
       "options": {
@@ -36,7 +41,11 @@
     {
       "files": "*.md",
       "options": {
-        "proseWrap": "preserve"
+        "proseWrap": "preserve",
+        "printWidth": 120,
+        "tabWidth": 2,
+        "trailingComma": "none",
+        "singleQuote": true
       }
     }
   ]
