--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,5 @@
 {
+  "endOfLine": "lf",
   "overrides": [
     {
       "files": ["**/*.{js,jsx}"],
@@ -39,7 +40,7 @@
       }
     },
     {
-      "files": "*.md",
+      "files": ["*.md"],
       "options": {
         "proseWrap": "preserve",
         "printWidth": 120,
