--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "type": "module",
   "main": "eslint.config.js",
   "scripts": {
-    "dev": "",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint . --format pretty",
@@ -44,6 +46,7 @@
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.26.0",
     "@eslint/json": "^0.12.0",
+    "concurrently": "^9.1.2",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-formatter-pretty": "^6.0.1",
