--- a/server/package.json
+++ b/server/package.json
@@ -14,23 +14,26 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "dev:debug": "cross-env NODE_DEBUG=mongoose,http NODE_ENV=development nodemon src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon -r ./bootstrap.js src/index.js",
+    "dev:debug": "cross-env NODE_DEBUG=mongoose,http NODE_ENV=development nodemon -r ./bootstrap.js src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write . --ignore-path .prettierignore",
     "format:check": "prettier --check . --ignore-path ../.prettierignore",
-    "start": "cross-env NODE_ENV=production node src/index.js",
-    "start:staging": "cross-env NODE_ENV=staging node src/index.js",
+    "start": "cross-env NODE_ENV=production node -r ./bootstrap.js src/index.js",
+    "start:staging": "cross-env NODE_ENV=staging node -r ./bootstrap.js src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "mongoose": "^8.14.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
