--- a/server/.env.staging
+++ b/server/.env.staging
@@ -8,3 +8,6 @@ JWT_EXPIRES_IN=1d
 JWT_COOKIE_EXPIRES_IN=1
 JWT_REFRESH_EXPIRES_IN=7d
 JWT_REFRESH_COOKIE_EXPIRES_IN=7
+DB_URI=
+JWT_SECRET=
+JWT_REFRESH_SECRET=
